--- a/面试题.md
+++ b/面试题.md
@@ -174,6 +174,32 @@ Token是服务端生成的一串字符串，以作客户端进行请求的一个
 
 ​	它是Vue构造器的扩展，调用`Vue.extend()`创建的是一个组件构造器，而不是一个具体的组件实例， extend就是一个构造器，就像原生js的构造函数，可以new N次，构造N个对象，但是不能重复使用
 
+### 31.[VUE父子组件生命周期执行顺序 ￼](https://www.cnblogs.com/luhu123/p/16522839.html)
+
+vue父子组件生命周期执行顺序
+
+1.首先执行的是父组件的beforeCreate
+
+2.执行的是父组件的created周期
+
+3.执行的是父组件的beforeMount周期
+
+4.执行的是子组件的beforeCreate周期
+
+5.执行的是子组件的created周期
+
+6.执行的是子组件的beforeMount周期
+
+7.执行的是子组件的mounted周期
+
+8.执行的是父组件的mounted周期
+
+总结：
+
+执行的先后顺序为 父beforeCreate->父created->父beforeMount->子beforeCreate->子created->子beforeMount->子mounted->父mounted 。
+
+
+
 
 
 
